Fixed CSS for ul for mobile from display: flex to block for right alignment.

--- a/src/index.css
+++ b/src/index.css
@@ -168,7 +168,7 @@ header h1 a:hover {
 
 nav {
   font-weight: normal;
-  width:60%;
+  /* width:60%; */
   text-align:right;
   padding: 0px;
   padding-top: 15px;
@@ -179,6 +179,7 @@ ul {
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
+
 }
 
 
@@ -423,7 +424,19 @@ text-align:center;
   font-size: 20px;
 }
 
+.head-container {
+  width: 100%;
+  /* display: flex;
+  justify-content: center;
+  align-items: center;  */
+}
+
+ul {
+  display: block;
+}
+
 nav {
   font-size: 13px;
+
 }
 }
